Oath logo added

--- a/agegate/src/public/sass/style.scss
+++ b/agegate/src/public/sass/style.scss
@@ -59,19 +59,27 @@ a
     opacity:0;
     visibility: hidden;
   }
-}
-#age-gate
-{
-  background: #fff;
-  margin: 0 auto;
-  width: 40%;
-  padding: 2%;
-  box-shadow: 0 0 25px -5px #bebebe;
-  border-radius: 10px ;
-  display: block;
-  opacity: 1;
-  visibility: visible;
-  top: 10px;
+  #age-gate
+  {
+    background: #fff;
+    margin: 0 auto;
+    width: 40%;
+    padding: 2%;
+    box-shadow: 0 0 25px -5px #bebebe;
+    border-radius: 10px ;
+    display: block;
+    opacity: 1;
+    visibility: visible;
+    top: 10px;
+    .logo
+    {
+      width: 50%;
+      padding-top: 23%;
+      margin:1em auto;
+      background-image:url('im_oath_logo.svg');
+      background-repeat:no-repeat;
+    }
+  }
 }
 #age-gate-form
 {
@@ -150,7 +158,7 @@ a
     background-color: #009bc9;
     color:#FFFFFF;
     cursor:pointer;
-    margin: 1em 0;
+    margin: 1em 0 0 0;
     &:hover, &:active, &:focus
     {
       // outline: 0;
@@ -162,10 +170,11 @@ a
   {
     background: #e58692;
     border: 1px solid #8c5159;
-    padding: .5em 0;
+    // padding: .5em 0;
     transition:all 0.4s ease;
     opacity: 0;
     visibility: hidden;
+    margin-top:1em;
     p
     {
       color: #fff;
