--- a/agegate/src/views/overlay.html
+++ b/agegate/src/views/overlay.html
@@ -1,6 +1,7 @@
 <!-- Age Gate -->
 <div id="age-gate-wrapper">
   <div id="age-gate">
+    <div class="logo"></div>
     <div class="border_wrap">
       <form name="age-gate-form" id="age-gate-form" class="age-form">
         <input type="hidden" name="requiredAge" id="requiredAge" value="21">
